# content_factory

./: .gitignore  CONTENT_PACKAGE_V1.md  PROJECT_PLAN.md  Procfile  README.md  THE_PRODUCT_WHEEL_EXECUTION_PLAN.md  _config.yaml  ai_content_factory_project_plan.md  ai_content_factory_schema.yaml  cli.py  config.py  index.html  login.html  onboard.html  onboarding.html  onboarding_app.py  onboarding_ui.py  pyproject.toml  railway.toml  scheduler.py
.claude/: launch.json
agents/: affiliate_routing_agent.py  copy_editor_agent.py  depth_expansion_agent.py  final_title_agent.py  image_generation_agent.py  llm_client.py  post_repair_agent.py  preflight_qa_agent.py  product_agent.py  title_optimization_agent.py  title_validation.py  topic_agent.py
config/: affiliates.yaml
content_factory/: __init__.py  article_writer.py  artifact_io.py  artifact_models.py  artifact_validation.py  brand_context.py  channel_qa.py  cli.py  compiler.py  content_runner.py  editorial.py  emailer.py  generation.py  github_sync.py  manual_import.py  models.py  onboarding.py  package_writer.py  pr_delivery.py  references.py  schema_loader.py  topic_generator.py  validation.py
integrations/: amazon_creator_client.py  claude_adapters.py  instagram_client.py  openai_adapters.py
lib/: pick_image_enrichment.py
memory/: category_memory.json
pipeline/: amazon_product_selector.py  manual_catalog_applier.py  manual_post_planner.py  manual_post_writer.py  tpw_auto_planner.py
prompts/: topic_selection.txt
schemas/: affiliates_config.py  depth.py  hero_image.py  post_format.py  preflight.py  product.py  title.py  topic.py  topic_override.py
scripts/: build_brand_context.py  cleanup_repo.py  deliver_package_pr.py  enrich_pick_images_from_og.py  fix_post_descriptions.py  regenerate_hero_variants.py  run_content_factory.py  (+4 more)
(+77 files in other folders)
