[tool.poetry]
name = "ai-affiliate-engine"
version = "0.1.0"
description = ""
authors = ["JP"]
package-mode = true

# Poetry otherwise tries to locate a package named after `tool.poetry.name`
# (ai_affiliate_engine), which doesn't exist in this repo. Declare the actual
# top-level packages we import from so console scripts work.
packages = [
    { include = "content_factory" },
    { include = "agents" },
    { include = "integrations" },
    { include = "schemas" },
    { include = "lib" },
]

[tool.poetry.dependencies]
pillow = ">=10.0.0,<11.0.0"
python = ">=3.11,<3.13"
openai = ">=1.12.0,<2.0.0"
pydantic = ">=2.5.0,<3.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
python-dateutil = ">=2.8.2,<3.0.0"
pyyaml = "^6.0.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
content-factory = "content_factory.cli:main"



[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
